mjs/tests/invalid_syntax/closure.js
(function() {
  let x = 1;

  return (function() {
    return x;
  })();
})();
